# cheGi

./: .chegi.json  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHARITY.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  build.py  build_binary.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  idea.md
.github/workflows/: brew.yml  ci.yml  copr.yml  docker.yml  docs.yml  pypi.yaml  release.yml  winget.yml
builder/: config.py  linux.py  macos.py  utils.py  windows.py
builder_binary/: config.py  linux.py  macos.py  utils.py  windows.py
docs/: configuration.md  index.md  security.md
docs/commands/: aliases.md  auth.md  branch.md  clone.md  commit.md  completions.md  config.md  doctor.md  git-config.md  gitignore.md  guard.md  hooks.md  info.md  init.md  new.md  repo.md  reword.md  scan.md  setup.md  sync.md  upgrade.md
fedora/: chegi.spec
scripts/: extract_msi_productcode.py
src/chegi/: __init__.py  __main__.py  cli.py  config.py  env_manager.py  git_utils.py  gitignore_templates.py  installer.py  scanner.py  security.py  ui.py
src/chegi/cli/: __init__.py  main.py
src/chegi/config/: __init__.py  models.py  (+4 more)
tests/: test_cli.py  test_config.py  test_env_manager.py  test_git_utils.py  test_installer.py  test_scanner.py  test_security.py  test_ui.py
tests/cli/: test_main.py
tests/config/: test_global_config.py  test_manager.py
tests/ui/: conftest.py  test_console.py  test_exceptions.py  test_models.py  test_tables.py  test_themes.py
tests/utils/: test_finder.py
(+198 files in other folders)
