[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chegi"
version = "0.1.0"
description = "Fast & Concurrent Git Repository Manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
chegi = "chegi.cli:app"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
